--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,91 @@
-docbook-xsl.css
-isolate
-isolate.1
-isolate.1.html
+# http://www.gnu.org/software/automake
+
+.vscode
+.idea
+.DS_Store
+.libs/
+criterion_tests
+*.la
+libtool
+rationl-*.tar.gz
+rationl-*/
+*.lo
+compile_commands.json
+.cache/
+*.gcov
 *.o
+*.stamp
+*.log
+*.trs
+
+#Weird tmp files
+*~
+
+#Test binaries
+tap-driver.sh
+#Coverage files
+reports/
+*.gcno
+*.gcda
+*.info
+*_tests
+#Autoheader files
+stamp-h1
+include/config.h
+include/config.h.in
+
+#Docs
+DoxyfileInternal
+DoxyfilePublic
+/docs/internal
+/docs/public
+
+Makefile.in
+/ar-lib
+/mdate-sh
+/py-compile
+/test-driver
+/ylwrap
+.deps/
+.dirstamp
+
+# http://www.gnu.org/software/autoconf
+
+autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.guess
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+
+# https://www.gnu.org/software/libtool/
+
+/ltmain.sh
+
+# http://www.gnu.org/software/texinfo
+
+/texinfo.tex
+
+# http://www.gnu.org/software/m4/
+
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
+# Generated Makefile 
+# (meta build system like autotools, 
+# can automatically generate from config.status script
+# (which is called by configure script))
+Makefile
