--- a/Makefile.am
+++ b/Makefile.am
@@ -25,3 +25,5 @@ libisolate_la_LDFLAGS = -lcap
 
 libisolate_la_SOURCES = $(source_files) $(header_files)
 
+install-exec-hook:
+	cp $(top_srcdir)/isolate.pc @libdir@/pkgconfig/isolate.pc
