--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install lipcap
+        run: sudo apt-get install libcap-dev
       - name: Configure project
         run: ./bootstrap && ./configure
       - name: Compile project
