--- a/isolate.pc.in
+++ b/isolate.pc.in
@@ -5,6 +5,6 @@ includedir=@includedir@
 
 Name: isolate
 Description: The isolate library
-Version: 1.0.0
-Cflags: -I${includedir}/isolate
+Version: 1.8.2
+Cflags: -I${includedir}/isolate.h
 Libs: -L${libdir} -lisolate
